# GPU_Temperature

./: .gitignore  CMakeLists.txt  README.md  config.h.in  config.json  config_file.json  configure.sh  run.sh
include/: GpuTemp.hxx  types.h
src/: CMakeLists.txt  main.cxx
src/fft/: AmFft.cpp  FmFft.cpp  FmFftSepNl.cpp
src/monitoring/: CMakeLists.txt  CMakeLists.txt.NV+AMD  IMonitor.hxx  Monitor.hxx  NvidiaMonitor.cxx  NvidiaMonitor.hxx
src/network/: CMakeLists.txt  NetworkModule.hxx  UdpClient.hxx  UdpNode.hxx  UdpServer.cxx  UdpServer.hxx
src/tests/: tests.cpp
